--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 .h1--big {
   font-size: 48px;
   line-height: 58px;
@@ -7,6 +8,11 @@
 
 .border--pink {
   border: 1px solid #F16D7F;
+}
+
+#page--active {
+  font-weight: bold;
+  color: #F16D7F;
 }
 
 .text--pink {
@@ -45,6 +51,28 @@ ol {
 .container {
   width: 1140px;
   margin: 0 auto;
+}
+
+.breadcrumbs li {
+  display: inline-block;
+}
+
+.breadcrumbs li a {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: 14px;
+  color: #636363;
+}
+
+.breadcrumbs li a:hover {
+  text-decoration: underline;
+  color: #000;
+}
+
+.breadcrumbs li + li::before {
+  content: '/ ';
+  margin: 0 5px;
 }
 
 .header {
@@ -93,8 +121,8 @@ ol {
   height: 764px;
   position: absolute;
   padding: 37px 34px;
-  top: 0%;
-  right: 0%;
+  top: 0;
+  right: 0;
   background-color: #fff;
   -webkit-box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
           box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
@@ -170,8 +198,32 @@ ol {
   border-left: 12px solid #F16D7F;
 }
 
+.heading {
+  background-color: #F8F3F4;
+}
+
+.heading h2 {
+  text-transform: uppercase;
+  font-weight: normal;
+  color: #F16D7F;
+}
+
+.heading__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 60px 0;
+}
+
 .catalog {
-  margin-top: 65px;
+  padding-top: 65px;
+  padding-bottom: 46px;
 }
 
 .catalog__body {
@@ -240,11 +292,11 @@ ol {
 }
 
 .cart {
-  margin-top: 96px;
+  padding-top: 50px;
   text-align: center;
 }
 
-.cart__header h2 {
+.cart__header h3 {
   font-weight: normal;
   font-size: 30px;
   line-height: 36px;
@@ -361,6 +413,227 @@ ol {
 .cart__btn a:hover {
   background-color: #F16D7F;
   color: #fff;
+}
+
+.cart__filter {
+  position: relative;
+}
+
+.cart__filter__basic {
+  text-align: initial;
+}
+
+.cart__filter__basic > details {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  padding: 16px;
+}
+
+.cart__filter__basic > details > summary {
+  text-transform: uppercase;
+  list-style: none;
+  font-weight: 600;
+  font-size: 14px;
+  color: #000000;
+  cursor: pointer;
+}
+
+.cart__filter__basic > details svg {
+  fill: #000;
+  margin-left: 11px;
+}
+
+.cart__filter__basic > details[open] {
+  z-index: 1;
+  background: #FFFFFF;
+  -webkit-box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+          box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+  width: 360px;
+}
+
+.cart__filter__basic > details[open] > summary {
+  position: relative;
+  color: #EF5B70;
+}
+
+.cart__filter__basic > details[open] > summary > svg {
+  fill: #EF5B70;
+}
+
+.cart__filter__basic > details details > summary {
+  text-transform: uppercase;
+  font-size: 14px;
+  list-style: none;
+  margin-top: 18px;
+  padding: 12px 16px 15px;
+  color: #6F6E6E;
+  border-left: 5px solid #EF5B70;
+  border-bottom: 1px solid #EBEBEB;
+  cursor: pointer;
+}
+
+.cart__filter__basic > details details > summary:hover {
+  border-bottom: 1px solid #EF5B70;
+  font-weight: bold;
+}
+
+.cart__filter__basic > details details[open] > summary {
+  color: #EF5B70;
+  font-weight: bold;
+  border-bottom: 1px solid #EF5B70;
+}
+
+.cart__filter__basic > details details > ul {
+  padding: 24px 16px;
+}
+
+.cart__filter__basic > details details > ul li + li {
+  margin-top: 11px;
+}
+
+.cart__filter__basic > details details > ul li > a {
+  text-decoration: none;
+  font-size: 14px;
+  color: #6F6E6E;
+}
+
+.cart__filter__basic > details details > ul li > a:hover {
+  color: #000;
+}
+
+.cart__filter__extra {
+  padding: 8px 0;
+}
+
+.cart__filter__extra ul {
+  list-style: none;
+}
+
+.cart__filter__extra ul > li {
+  display: inline-block;
+}
+
+.cart__filter__extra ul details {
+  position: relative;
+}
+
+.cart__filter__extra ul details > summary {
+  list-style: none;
+  padding: 9px 19px 9px 9px;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #6F6E6E;
+}
+
+.cart__filter__extra ul details > summary:hover {
+  color: #000;
+}
+
+.cart__filter__extra ul details > summary > svg {
+  margin-left: 10px;
+}
+
+.cart__filter__extra ul details > .details-body {
+  text-align: left;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: absolute;
+  left: 0;
+  right: 0;
+  background-color: #FFFFFF;
+  -webkit-box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+          box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+  padding: 9px;
+  z-index: 1;
+}
+
+.cart__filter__extra ul details > .details-body input {
+  margin-right: 9px;
+}
+
+.cart__filter__extra ul details > .details-body > label {
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+}
+
+.cart__filter__extra ul details > .details-body > label:hover {
+  font-weight: bold;
+}
+
+.cart__filter__extra ul details > .details-body > label + label {
+  margin-top: 9px;
+}
+
+.cart__pagination {
+  margin-top: 48px;
+  display: inline-block;
+  position: relative;
+  padding: 15px 16px;
+  border: 1px solid #EBEBEB;
+}
+
+.cart__pagination > ul {
+  list-style: none;
+  padding: 0;
+  margin: 0 28px;
+}
+
+.cart__pagination > ul > li {
+  display: inline-block;
+}
+
+.cart__pagination > ul > li + li > a {
+  padding-left: 24px;
+}
+
+.cart__pagination > ul > li > .last-elem {
+  position: relative;
+}
+
+.cart__pagination > ul > li > .last-elem::before {
+  content: " ";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: inline;
+  width: 22px;
+  border-bottom: 2px dotted #C4C4C4;
+}
+
+.cart__pagination > ul > li > a {
+  font-size: 16px;
+  color: #C4C4C4;
+}
+
+.cart__pagination > ul > li > a:hover {
+  color: #000;
+}
+
+.cart__pagination > ul > li > .active {
+  color: #EF5B70;
+}
+
+.cart__pagination > ul > li > .active:hover {
+  color: #EF5B70;
+}
+
+.cart__pagination__nav .prev {
+  position: absolute;
+  left: 16px;
+  top: 19px;
+}
+
+.cart__pagination__nav .next {
+  position: absolute;
+  right: 16px;
+  top: 19px;
 }
 
 .service {
