--- a/styles/style.css
+++ b/styles/style.css
@@ -339,29 +339,45 @@ ol {
   margin-top: 30px;
 }
 
-.cart__item:hover::before {
-  content: ' ';
-  display: block;
+.cart__item__overlay {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   position: absolute;
+  top: 0;
   width: 100%;
   height: 420px;
   background-color: rgba(0, 0, 0, 0.5);
+  -webkit-transition: .2s;
+  transition: .2s;
+  opacity: 0;
 }
 
-.cart__item:hover::after {
-  display: block;
-  content: 'Add to Cart';
-  position: absolute;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-  margin-top: 50%;
-  border: 1px solid #fff;
-  padding: 14px 16px 14px 50px;
-  background-image: url("../images/icon-shoppinCart.svg");
-  background-position: 14px;
-  background-repeat: no-repeat;
+.cart__item__overlay span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: #fff;
+  border: 1px solid #fff;
+  padding: 11px 16px 8px 14px;
+  font-size: 14px;
+}
+
+.cart__item__overlay svg {
+  margin-right: 11px;
+}
+
+.cart__item:hover .cart__item__overlay {
+  opacity: 1;
 }
 
 .cart__item__img {
