--- a/styles/style.scss
+++ b/styles/style.scss
@@ -319,28 +319,35 @@ ol {
         background-color: #F8F8F8;
         margin-top: 30px;
 
-        &:hover::before {
-            content: ' ';
-            display: block;
+        &__overlay {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             position: absolute;
+            top: 0;
             width: 100%;
             height: 420px;
             background-color: rgba(0, 0, 0, .5);
+            // hovers
+            transition: .2s;
+            opacity: 0;
+
+            & span {
+                display: flex;
+                align-items: center;
+                color: #fff;
+                border: 1px solid #fff;
+                padding: 11px 16px 8px 14px;
+                font-size: 14px;
+            }
+
+            & svg {
+                margin-right: 11px;
+            }
         }
 
-        &:hover::after {
-            display: block;
-            content: 'Add to Cart';
-            position: absolute;
-            align-self: center;
-            margin-top: 50%;
-            border: 1px solid #fff;
-            padding: 14px 16px 14px 50px;
-
-            background-image: url('../images/icon-shoppinCart.svg');
-            background-position: 14px;
-            background-repeat: no-repeat;
-            color: #fff;
+        &:hover &__overlay {
+            opacity: 1;
         }
 
         &__img {
