--- a/styles/style.css
+++ b/styles/style.css
@@ -1187,4 +1187,140 @@ input[type="number"]::-webkit-inner-spin-button {
 .footer__right a:hover svg .svg-icon {
   fill: white;
 }
+
+.registration {
+  padding: 64px 0 96px;
+}
+
+.registration__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.registration__body__userData {
+  width: 360px;
+}
+
+.registration__body__userData h3 {
+  display: block;
+  font-weight: 300;
+  font-size: 16px;
+  color: #222222;
+}
+
+.registration__body__userData .gender {
+  margin: 33px 0;
+}
+
+.registration__body__userData .gender label {
+  margin-right: 20px;
+  font-weight: 300;
+  font-size: 11px;
+  color: #000000;
+}
+
+.registration__body__userData .gender input {
+  margin-right: 10px;
+}
+
+.registration__body__userData form > input {
+  width: 100%;
+  display: block;
+  margin-top: 20px;
+  font-weight: 300;
+  font-size: 13px;
+  color: #000;
+  padding: 16px 17px;
+  border: 1px solid #A4A4A4;
+  outline-color: #B1B1B1;
+}
+
+.registration__body__userData form > input::-webkit-input-placeholder {
+  color: #B1B1B1;
+}
+
+.registration__body__userData form > input:-ms-input-placeholder {
+  color: #B1B1B1;
+}
+
+.registration__body__userData form > input::-ms-input-placeholder {
+  color: #B1B1B1;
+}
+
+.registration__body__userData form > input::placeholder {
+  color: #B1B1B1;
+}
+
+.registration__body__userData p {
+  margin-top: 15px;
+  font-weight: 300;
+  font-size: 13px;
+  color: #B1B1B1;
+}
+
+.registration__body__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.registration__body__btn button {
+  text-transform: uppercase;
+  margin-top: 40px;
+  border: none;
+  padding: 17px 30px;
+  font-size: 14px;
+  color: #FFFFFF;
+  -webkit-transition: .2s;
+  transition: .2s;
+}
+
+.registration__body__btn button:hover {
+  background-color: #E05C6E;
+}
+
+.registration__body__btn button svg {
+  margin-left: 20px;
+}
+
+.registration__body__perks {
+  width: 652px;
+}
+
+.registration__body__perks h3 {
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: 24px;
+  color: #000000;
+}
+
+.registration__body__perks p {
+  margin-top: 22px;
+  font-weight: 300;
+  font-size: 24px;
+}
+
+.registration__body__perks ul {
+  padding: 0;
+  margin-top: 22px;
+  font-weight: 300;
+  font-size: 24px;
+  list-style-image: url("../../images/yes.svg");
+  list-style-position: inside;
+}
+
+.registration__body__perks ul li + li {
+  margin-top: 16px;
+}
+
+.registration__body__perks ul li span {
+  margin-left: 23px;
+}
 /*# sourceMappingURL=style.css.map */
