--- a/styles/style.css
+++ b/styles/style.css
@@ -289,6 +289,7 @@ input[type="number"]::-webkit-inner-spin-button {
 
 .catalog__item:last-child {
   width: 100%;
+  height: 180px;
   margin-top: 30px;
 }
 
