Fixed some small things and added effects

--- a/styles/scss/_footer.scss
+++ b/styles/scss/_footer.scss
@@ -30,6 +30,7 @@
 
             &:hover svg {
                 fill: #F16D7F;
+                transform: translateY(-5px);
 
                 & .svg-icon {
                     fill: white;
