--- a/styles/scss/_cart.scss
+++ b/styles/scss/_cart.scss
@@ -52,17 +52,30 @@
             transition: .2s;
             opacity: 0;
 
-            & span {
+            & a {
                 display: flex;
                 align-items: center;
                 color: #fff;
                 border: 1px solid #fff;
                 padding: 11px 16px 8px 14px;
                 font-size: 14px;
+                transition: .2s;
+
+                &:hover {
+                    color: #000;
+                    background-color: #fff;
+                    border: 1px solid #000;
+                    
+                    & svg {
+                        fill: #000;
+                    }
+                }
             }
 
             & svg {
+                fill: #fff;
                 margin-right: 11px;
+                transition: .2s;
             }
         }
 
