--- a/styles/scss/_inCart.scss
+++ b/styles/scss/_inCart.scss
@@ -23,10 +23,14 @@
                 top: 22px;
                 right: 22px;
                 cursor: pointer;
+                transform: rotate(-180deg);           
+                transition: .5s ease-out;
 
                 &:hover {
                     font-weight: bold;
                     color: #EF5B70;
+                    transform: rotate(180deg);                   
+                    transition: .5s ease-out;
                 }
             }
         }
