--- a/styles/style.css
+++ b/styles/style.css
@@ -179,10 +179,18 @@ input[type="number"]::-webkit-inner-spin-button {
   top: 16px;
   right: 16px;
   cursor: pointer;
+  -webkit-transform: rotate(-180deg);
+          transform: rotate(-180deg);
+  -webkit-transition: .5s ease-out;
+  transition: .5s ease-out;
 }
 
 .main__menu .close:hover {
   color: #F16D7F;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+  -webkit-transition: .5s ease-out;
+  transition: .5s ease-out;
 }
 
 .main__menu .categories {
@@ -384,7 +392,7 @@ input[type="number"]::-webkit-inner-spin-button {
   opacity: 0;
 }
 
-.cart__item__overlay span {
+.cart__item__overlay a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -395,10 +403,25 @@ input[type="number"]::-webkit-inner-spin-button {
   border: 1px solid #fff;
   padding: 11px 16px 8px 14px;
   font-size: 14px;
+  -webkit-transition: .2s;
+  transition: .2s;
+}
+
+.cart__item__overlay a:hover {
+  color: #000;
+  background-color: #fff;
+  border: 1px solid #000;
+}
+
+.cart__item__overlay a:hover svg {
+  fill: #000;
 }
 
 .cart__item__overlay svg {
+  fill: #fff;
   margin-right: 11px;
+  -webkit-transition: .2s;
+  transition: .2s;
 }
 
 .cart__item:hover .cart__item__overlay {
@@ -828,11 +851,19 @@ input[type="number"]::-webkit-inner-spin-button {
   top: 22px;
   right: 22px;
   cursor: pointer;
+  -webkit-transform: rotate(-180deg);
+          transform: rotate(-180deg);
+  -webkit-transition: .5s ease-out;
+  transition: .5s ease-out;
 }
 
 .inCart__goods__item > .close:hover {
   font-weight: bold;
   color: #EF5B70;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+  -webkit-transition: .5s ease-out;
+  transition: .5s ease-out;
 }
 
 .inCart__goods__control {
@@ -1183,6 +1214,8 @@ input[type="number"]::-webkit-inner-spin-button {
 
 .footer__right a:hover svg {
   fill: #F16D7F;
+  -webkit-transform: translateY(-5px);
+          transform: translateY(-5px);
 }
 
 .footer__right a:hover svg .svg-icon {
